--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,15 @@
     <string name="nama1">Nama Siswa :</string>
     <string name="alamat1">Alamat Siswa :</string>
     <string name="telpon1">"Telpon Siswa :</string>
+    <string name="required_field">"* required fields</string>
+    <string name="btn_submit">"Submit</string>
+    <string name="detail_siswa">"Detail Siswa</string>
+    <string name="edit_siswa">"Edit Siswa</string>
+    <string name="back">"Back</string>
+    <string name="yes">"Ya</string>
+    <string name="no">"No</string>
+    <string name="delete">"Hapus</string>
+    <string name="update">"Edit</string>
+    <string name="attention">"Perhatian</string>
+    <string name="tanya">"Apakah anda yakin menghapus ini ?</string>
 </resources>
